# fl_app

./: .gitignore  CustomClasses.py  check_cuda.py  cifar10_data_prep.py  client_app.py  custom_aggregation.py  dashboard.ipynb  data_split.py  data_utils.py  flwr_data_prep.py  model_functions.py  model_params.py  pyproject.toml  requirements.txt  server_app.py  sever_app.py  test_model_aggregation.py  test_split_layer_agg.py  utils.py  wheat_data_prep.py  wheat_data_utils.py
