[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-learning-app"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "server_app:server"
clientapp = "client_app:client"

[tool.flwr.app.config]
num-server-rounds = 1
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.01
batch-size = 32
momentum = 0.9

# model configs
dataset_id = "uoft-cs/cifar10"
#classes = 'airplanes cars birds cats deer dogs frogs horses ships trucks'
classes = "['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']"
img_c = 3
img_h = 32
img_w = 32

out_channels = "[8, 16]"
kernel_size = 5

out_features = 10

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
