[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-learning-app"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "server_app:server"
clientapp = "client_app:client"

[tool.flwr.app.config]
num-server-rounds = 1
fraction-evaluate = 0  # fraction of clients selected for evaluation. set to 0 to skip eval
local-epochs = 1

momentum = 0.9

model-name = "mobilenet_v3_large"
freeze = 0    # 1 for true, 0 for false
features-lr = 0.001
classifier-lr = 0.01
weight-decay = 1e-2

batch-size = 16
use-sampler = 0  # 1 for true, 0 for false
num-workers = 4
sch-patience = 10
mixer = "cutmix"
use-weights = 0  # 1 for true, 0 for false

# currently usable datasets: "wheat", "cifar10"
dataset-name = "wheat"


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
