[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-learning-app"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "server_app:server"
clientapp = "client_app:client"

[tool.flwr.app.config]
num-server-rounds = 15
fraction-train = 1  # fraction of clients selected for evaluation. set to 0 to skip eval
fraction-evaluate = 0  # fraction of clients selected for evaluation. set to 0 to skip eval
local-epochs = 3

momentum = 0.9

model-name = "mobilenet_v3_large"
# model-name = "cnn"
freeze = 0    # 1 for true, 0 for false
features-lr = 0.001
classifier-lr = 0.001
weight-decay = 1e-2

batch-size = 32
use-sampler = 0  # 1 for true, 0 for false
num-workers = 0
sch-patience = 3
mixer = ""
use-weights = 0  # 1 for true, 0 for false
use-global-weights = 0
proximal-mu = 0 # setting this to 0 will make FedProx behave like FedAvg
use-custom-agg = 0  # 1 or 0 for using custom aggregation method
use-loss-masking = 0

# currently usable datasets: "wheat", "cifar10"
dataset-name = "wheat"
#dataset-name = "cifar10"


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
